fix: scroll bar UI
- Hidden scrollbar and cross browsing

--- a/src/styles/components/reservationCard/index.css
+++ b/src/styles/components/reservationCard/index.css
@@ -5,9 +5,9 @@
   height: 80%;
   overflow-y: scroll;
   overflow-x: hidden;
+
   -ms-overflow-style: none;
   scrollbar-width: none;
-  overflow: -moz-scrollbars-none;
 }
 
 .cards-wrapper::-webkit-scrollbar {
