--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,5 +41,11 @@ main > h1 {
     height: fit-content;
     min-height: fit-content;
     padding-bottom: 24px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  main::-webkit-scrollbar {
+    display: none;
+    width: 0 !important;
   }
 }
